# spotatui

./: .all-contributorsrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md
.github/: dependabot.yml
.github/workflows/: cd.yml  publish-aur.yml  toc.yml
src/: app.rs  banner.rs  config.rs  cover_art.rs  main.rs  mpris.rs  network.rs  sort.rs  user_config.rs
src/audio/: analyzer.rs  capture.rs  mod.rs  pipewire_capture.rs
src/cli/: cli_app.rs
src/core/: app.rs  user_config.rs
src/handlers/: artist.rs  basic_view.rs  common_key_events.rs  discover.rs  empty.rs  episode_table.rs  help_menu.rs  input.rs  library.rs  mod.rs  playlist.rs  recently_played.rs  select_device.rs  settings.rs  track_table.rs
src/infra/network/: library.rs  playback.rs
src/player/: streaming.rs
src/tui/: cover_art.rs  mod.rs
src/tui/ui/: player.rs  popups.rs
src/ui/: audio_analysis.rs  help.rs  mod.rs  util.rs
