[package]
name = "spotify-tui"
description = "A terminal user interface for Spotify"
homepage = "https://github.com/Rigellute/spotify-tui"
documentation = "https://github.com/Rigellute/spotify-tui"
repository = "https://github.com/Rigellute/spotify-tui"
keywords = ["spotify", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.25.0"
authors = ["Alexander Keliris <rigellute@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.12", default-features = false, features = ["cli", "env-file", "client-reqwest"] }
ratatui = { version = "0.26", features = ["crossterm"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "5.0"
clap = "2.33.3"
unicode-width = "0.1.8"
backtrace = "0.3.57"
arboard = "3.4"
crossterm = "0.27"
tokio = { version = "1.40", features = ["full"] }
rand = "0.8.4"
anyhow = "1.0.43"

[[bin]]
bench = false
path = "src/main.rs"
name = "spt"
